styles/components/animated-screen-scroll.scss
/** Default Base Styling here - assumes screen image is centered on screen.
Overrides can be specified by filling in the "AdditionalClass" field in Contentful and referencing the selector below
**/
.animated-screen-scroll {
  width: 100%;
  overflow: hidden;

  .background-image {
    background-repeat: no-repeat;
    background-position: 50% 50%;
    background-size: 100% auto;
    width: 100%;
    min-height: 170px;
    display: flex;
    align-items: center;
    //border: 1px solid red;
    @media (min-width: $large-phone) {
      min-height: 290px;
    }
    @media (min-width: $tablet) {
      min-height: 395px;
    }
    @media (min-width: $desktop) {
      min-height: 650px;
      background-size: cover;
    }
    @media (min-width:  $desktop-large) {
      min-height: 705px;
    }
  }

  .device-wrapper {
    //border: 1px solid orange;
    margin: 0 auto;
    width: 50%;
    overflow: hidden;
    position: relative;
  }

  .screen-img {
    display: inline-block;
    //border: 1px solid green;
    overflow: hidden;
    @media (min-width: $tablet) {
      position: relative;
      width: 100%;
    }
  }

  .device-screen {
    width: auto;
    //border: 1px solid blue;
    position: relative;
    overflow: hidden;
    margin: 14px 16px;
    border-radius: 5px;
    display: none;
    z-index: 100;
    @media (min-width: $tablet) {
      height: 75%;
      display: inline-block;
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
    }
    @media (min-width: $desktop) {
      margin: 8px 11px;
      height: 81%;
    }
    @media (min-width: $desktop-large) {
      margin: 13px 14px;
    }
  }

  /* This is the long scrolling image that animates, hide for mobile */
  .img1 {
    width: auto;
    display: none;
    @media (min-width: $desktop) {
      display: inline-block;
      max-width: 100%;
    }
  }

  /* Overrides here */

  /** AFWI Case Study - screen is left aligned **/
  &.afwi-screen-scroll,
  &.left-aligned {
    .device-wrapper {
      margin: 0 8%;
      @media (min-width: $tablet) {
        margin: 0 40% 0 auto;
      }
      @media (min-width: $desktop) {
        margin: 0 40% 0 auto;
      }
    }
  }

  /** DIRTT Case Study - screen animated horizontally not vertically **/
  &.horizontal {
    .img1 {
      @media (min-width: $desktop) {
        max-width: initial;
        height: 100%;
      }
    }
  }

  /* Used for People's Choice & AuArts - mobile device and sizing */
  &.mobile {
    .background-image {
      align-items: flex-end;
      justify-content: center;
      padding-top: 10%;
    }
    .device-wrapper {
      width: 23%;
      @media (min-width: $tablet) {
        width: 37%;
      }
      @media (min-width: $desktop) {
        width: 25%;
      }
    }
    .screen-img {
      width: 100%;
    }
    .device-screen {
      display: none;
      @media (min-width: $desktop) {
        display: block;
        border-radius: 20px 25px 0 0;
        margin: 10px 9px;
        height: 100%;
      }
      @media (min-width: $desktop-large) {
        border-radius: 31px 31px 0 0;
        margin: 13px 12px;
      }
      @media (min-width: 1560px) {
        border-radius: 40px 40px 0 0;
        margin: 13px 12px;
      }
    }
  }
}

